cabal-version:      2.4
name:               hs-scroll
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Yutaka Nishimura
maintainer:         ytk.nishimura@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  default-language: Haskell2010
  exposed-modules:  Lib
  hs-source-dirs:   src
  build-depends:
    , base    ^>=4.14.3.0
    , foldl
    , turtle

executable hs-scroll
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base       ^>=4.14.3.0
    , foldl
    , hs-scroll
    , turtle

  hs-source-dirs:   app
  default-language: Haskell2010

executable hs-scroll-gui
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base             ^>=4.14.3.0
    , foldl
    , gi-gtk           ^>=3.0
    , haskell-gi-base
    , hs-scroll
    , text
    , turtle

  hs-source-dirs:   gui
  default-language: Haskell2010
